--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,8 @@ body {
 }
 
 .image-link {
-  height: 100%;
+  display: block;
+  background-color: #f2f2f2;
 }
 
 .image {
@@ -62,6 +63,9 @@ body {
   z-index: 1;
   max-width: 100%;
   height: auto;
+}
+.loading {
+  height: 200px !important;
 }
 
 .image:hover {
